[stable/nginx-ingress] Add affinity and pod disruption budget

--- a/stable/nginx-ingress/values.yaml
+++ b/stable/nginx-ingress/values.yaml
@@ -88,6 +88,8 @@ controller:
   #    value: "value"
   #    effect: "NoSchedule|PreferNoSchedule|NoExecute(1.6 only)"
 
+  affinity: {}
+
   ## Node labels for controller pod assignment
   ## Ref: https://kubernetes.io/docs/user-guide/node-selection/
   ##
@@ -114,6 +116,8 @@ controller:
   podAnnotations: {}
 
   replicaCount: 1
+
+  minAvailable: 1
 
   resources: {}
   #  limits:
@@ -215,6 +219,8 @@ defaultBackend:
   #    value: "value"
   #    effect: "NoSchedule|PreferNoSchedule|NoExecute(1.6 only)"
 
+  affinity: {}
+
   # labels to add to the pod container metadata
   podLabels: {}
   #  key: value
@@ -229,6 +235,8 @@ defaultBackend:
   podAnnotations: {}
 
   replicaCount: 1
+
+  minAvailable: 1
 
   resources: {}
   # limits:
