Fix warnings when deploying pushgateway

--- a/stable/prometheus/values.yaml
+++ b/stable/prometheus/values.yaml
@@ -561,7 +561,7 @@ pushgateway:
 
     ## pushgateway Ingress annotations
     ##
-    annotations:
+    annotations: {}
     #   kubernetes.io/ingress.class: nginx
     #   kubernetes.io/tls-acme: 'true'
 
