--- a/stable/external-dns/templates/secret.yaml
+++ b/stable/external-dns/templates/secret.yaml
@@ -8,7 +8,7 @@ metadata:
 type: Opaque
 data:
 {{- if .Values.google.applicationCredentials }}
-  {{ template "external-dns.google.applicationCredentialPath" . }}: {{ .Values.google.applicationCredentials | quote }}
+  {{ template "external-dns.google.applicationCredentialPath" . }}: {{ .Values.google.applicationCredentials | b64enc | quote }}
 {{- end }}
 {{- if and .Values.aws.secretKey .Values.aws.accessKey }}
   aws_access_key_id: {{ .Values.aws.accessKey | b64enc | quote }}
