[stable/wordpress] Fix ingress metadata.name bug.
Simpliy fixes https://github.com/kubernetes/charts/issues/2920

--- a/stable/wordpress/templates/ingress.yaml
+++ b/stable/wordpress/templates/ingress.yaml
@@ -3,7 +3,7 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: "{{- printf "%s-%s" .name $.Release.Name | trunc 63 | trimSuffix "-" -}}"
+  name: "{{- printf "%s-%s" .name $.Release.Name | trunc 63 | replace "." "_" | trimSuffix "-" -}}"
   labels:
     app: {{ template "fullname" $ }}
     chart: "{{ $.Chart.Name }}-{{ $.Chart.Version }}"
