Add release to selector matchLabels

--- a/incubator/nginx-ldapauth-proxy/templates/deployment.yaml
+++ b/incubator/nginx-ldapauth-proxy/templates/deployment.yaml
@@ -11,6 +11,7 @@ spec:
   selector:
     matchLabels:
       app: {{ template "nginx-ldapauth-proxy.fullname" . }}
+      release: {{ .Release.Name }}
   replicas: {{ .Values.replicaCount }}
   template:
     metadata:
