--- a/stable/minio/templates/minio_pvc.yaml
+++ b/stable/minio/templates/minio_pvc.yaml
@@ -1,5 +1,5 @@
 {{- if eq .Values.mode "standalone" "shared" }}
-{{- if .Values.persistence.enabled }}
+{{- if and .Values.persistence.enabled (not .Values.persistence.existingClaim) }}
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
@@ -19,6 +19,7 @@ spec:
   storageClassName: ""
 {{- else }}
   storageClassName: "{{ .Values.persistence.storageClass }}"
+{{- end }}
 {{- end }}
 {{- end }}
 {{- end }}
