--- a/stable/kanister-operator/values.yaml
+++ b/stable/kanister-operator/values.yaml
@@ -7,7 +7,9 @@ image:
   pullPolicy: IfNotPresent
 rbac:
   create: true
-  serviceAccountName:
+serviceAccount:
+  create: true
+  name:
 
 resources:
 # We usually recommend not to specify default resources and to leave this as a conscious
