--- a/stable/kanister-operator/templates/rbac.yaml
+++ b/stable/kanister-operator/templates/rbac.yaml
@@ -12,13 +12,15 @@ rules:
   - "*"
   verbs:
   - "*"
+{{- if .Values.serviceAccount.create }}
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   labels:
 {{ include "kanister-operator.helmLabels" . | indent 4 }}
-  name: {{ template "kanister-operator.fullname" . }}-sa
+  name: {{ template "kanister-operator.serviceAccountName" . }}
+{{- end }}
 ---
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1beta1
@@ -32,7 +34,7 @@ roleRef:
   name: edit
 subjects:
 - kind: ServiceAccount
-  name: {{ template "kanister-operator.fullname" . }}-sa
+  name: {{ template "kanister-operator.serviceAccountName" . }}
   namespace: {{ .Release.Namespace }}
 ---
 kind: ClusterRoleBinding
@@ -47,6 +49,6 @@ roleRef:
   name: {{ template "kanister-operator.fullname" . }}-cluster-role
 subjects:
 - kind: ServiceAccount
-  name: {{ template "kanister-operator.fullname" . }}-sa
+  name: {{ template "kanister-operator.serviceAccountName" . }}
   namespace: {{ .Release.Namespace }}
 {{- end }}
