--- a/incubator/sentry-kubernetes/templates/clusterrole.yaml
+++ b/incubator/sentry-kubernetes/templates/clusterrole.yaml
@@ -2,9 +2,8 @@
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
 metadata:
-  labels: {{ include "sentry-kubernetes.labels" . | indent 4 }}
-    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
-  name: {{ template "sentry-kubernetes.fullname" . }}
+    labels: {{ include "sentry-kubernetes.labels" . | indent 4 }}
+    name: {{ template "sentry-kubernetes.fullname" . }}
 rules:
   - apiGroups:
       - ""
@@ -14,4 +13,10 @@ rules:
       - get
       - list
       - watch
+  - apiGroups:
+    - ""
+    resources:
+    - secrets
+    verbs:
+    - get
 {{- end -}}
