[oauth-proxy] Rename to `oauth2-proxy` to match upstream.

--- a/incubator/oauth2-proxy/Chart.yaml
+++ b/incubator/oauth2-proxy/Chart.yaml
@@ -1,10 +1,10 @@
-name: oauth-proxy
-version: 0.1.5
+name: oauth2-proxy
+version: 0.1.6
 appVersion: 2.2
 description: A reverse proxy that provides authentication with Google, Github or other providers
 keywords:
 - kubernetes
-- oauth
+- oauth2
 - authentication
 - google
 - github
