--- a/incubator/oauth2-proxy/templates/deployment.yaml
+++ b/incubator/oauth2-proxy/templates/deployment.yaml
@@ -2,11 +2,11 @@ apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
   labels:
-    app: {{ template "oauth-proxy.name" . }}
+    app: {{ template "oauth2-proxy.name" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
-  name: {{ template "oauth-proxy.fullname" . }}
+  name: {{ template "oauth2-proxy.fullname" . }}
 spec:
   replicas: {{ .Values.replicaCount }}
   template:
@@ -16,7 +16,7 @@ spec:
 {{ toYaml .Values.podAnnotations | indent 8 }}
     {{- end }}
       labels:
-        app: {{ template "oauth-proxy.name" . }}
+        app: {{ template "oauth2-proxy.name" . }}
         release: "{{ .Release.Name }}"
       {{- if .Values.podLabels }}
 {{ toYaml .Values.podLabels | indent 8 }}
@@ -38,17 +38,17 @@ spec:
         - name: OAUTH2_PROXY_CLIENT_ID
           valueFrom:
             secretKeyRef:
-              name:  {{ template "oauth-proxy.fullname" . }}
+              name:  {{ template "oauth2-proxy.fullname" . }}
               key: client-id
         - name: OAUTH2_PROXY_CLIENT_SECRET
           valueFrom:
             secretKeyRef:
-              name:  {{ template "oauth-proxy.fullname" . }}
+              name:  {{ template "oauth2-proxy.fullname" . }}
               key: client-secret
         - name: OAUTH2_PROXY_COOKIE_SECRET
           valueFrom:
             secretKeyRef:
-              name:  {{ template "oauth-proxy.fullname" . }}
+              name:  {{ template "oauth2-proxy.fullname" . }}
               key: cookie-secret
         ports:
           - containerPort: {{ .Values.service.internalPort }}
