--- a/incubator/oauth2-proxy/templates/secret.yaml
+++ b/incubator/oauth2-proxy/templates/secret.yaml
@@ -2,11 +2,11 @@ apiVersion: v1
 kind: Secret
 metadata:
   labels:
-    app: {{ template "oauth-proxy.name" . }}
+    app: {{ template "oauth2-proxy.name" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
-  name: {{ template "oauth-proxy.fullname" . }}
+  name: {{ template "oauth2-proxy.fullname" . }}
 type: Opaque
 data:
   cookie-secret: {{ .Values.config.cookieSecret | b64enc | quote }}
