--- a/incubator/oauth2-proxy/templates/service.yaml
+++ b/incubator/oauth2-proxy/templates/service.yaml
@@ -2,11 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: {{ template "oauth-proxy.name" . }}
+    app: {{ template "oauth2-proxy.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
-  name: {{ template "oauth-proxy.fullname" . }}
+  name: {{ template "oauth2-proxy.fullname" . }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -14,5 +14,5 @@ spec:
       targetPort: {{ .Values.service.internalPort }}
       protocol: TCP
   selector:
-    app: {{ template "oauth-proxy.name" . }}
+    app: {{ template "oauth2-proxy.name" . }}
     release: {{ .Release.Name }}
