Write the liveness probe log to /tmp instead of /concourse-work-dir
If the worker runs out of disk space, logs will stop tee-ing to
/concourse-work-dir/.liveness_probe because it's on the same persistent
volume, and the condition won't be detected.

--- a/stable/concourse/templates/worker-statefulset.yaml
+++ b/stable/concourse/templates/worker-statefulset.yaml
@@ -33,14 +33,14 @@ spec:
           args:
             - -c
             - |-
-              cp /dev/null /concourse-work-dir/.liveness_probe
+              cp /dev/null /tmp/.liveness_probe
               rm -rf /concourse-work-dir/*
               while ! concourse retire-worker --name=${HOSTNAME} | grep -q worker-not-found; do
-                touch /concourse-work-dir/.pre_start_cleanup
+                touch /tmp/.pre_start_cleanup
                 sleep 5
               done
-              rm -f /concourse-work-dir/.pre_start_cleanup
-              concourse worker --name=${HOSTNAME} | tee -a /concourse-work-dir/.liveness_probe
+              rm -f /tmp/.pre_start_cleanup
+              concourse worker --name=${HOSTNAME} | tee -a /tmp/.liveness_probe
           livenessProbe:
             exec:
               command:
@@ -48,13 +48,13 @@ spec:
                 - -c
                 - |-
                   FATAL_ERRORS=$( echo "${LIVENESS_PROBE_FATAL_ERRORS}" | grep -q '\S' && \
-                      grep -F "${LIVENESS_PROBE_FATAL_ERRORS}" /concourse-work-dir/.liveness_probe )
-                  cp /dev/null /concourse-work-dir/.liveness_probe
+                      grep -F "${LIVENESS_PROBE_FATAL_ERRORS}" /tmp/.liveness_probe )
+                  cp /dev/null /tmp/.liveness_probe
                   if [ ! -z "${FATAL_ERRORS}" ]; then
                     >&2 echo "Fatal error detected: ${FATAL_ERRORS}"
                     exit 1
                   fi
-                  if [ -f /concourse-work-dir/.pre_start_cleanup ]; then
+                  if [ -f /tmp/.pre_start_cleanup ]; then
                     >&2 echo "Still trying to clean up before starting concourse. 'fly prune-worker -w ${HOSTNAME}' might need to be called to force cleanup."
                     exit 1
                   fi
