--- a/incubator/dashd/templates/deployment.yaml
+++ b/incubator/dashd/templates/deployment.yaml
@@ -22,26 +22,22 @@ spec:
   {{ toYaml .Values.resources | indent 10 }}
           ports:
             - name: rpc
-              containerPort: {{ .Values.rpcPort }}
+              containerPort: {{ .Values.service.rpcPort }}
+            - name: p2p
+              containerPort: {{ .Values.service.p2pPort }}
+            - name: testnet
+              containerPort: {{ .Values.service.testnetPort }}
           volumeMounts:
             - name: data
               mountPath: /dash
-            {{- if .Values.ssl.enabled }}
-            - name: ssl
-              mountPath: /etc/dashd-ssl
-            {{- end }}
             {{- if .Values.configurationFiles }}
-            - name: configurations
-              mountPath: /etc/dashd
+            - name: config
+              mountPath: /dash/.dash/dash.conf
+              subPath: dash.conf
             {{- end }}
       volumes:
-        {{- if .Values.ssl.enabled }}
-        - name: ssl
-          secret:
-            secretName: {{ .Values.ssl.secretName  }}
-        {{- end }}
-        {{- if .Values.configurationFiles }}
-        - name: configurations
+        {{- if .Values.configurationFile }}
+        - name: config
           configMap:
             name: {{ template "dashd.fullname" . }}
         {{- end }}
