--- a/incubator/dashd/values.yaml
+++ b/incubator/dashd/values.yaml
@@ -10,7 +10,7 @@ service:
   selector: tx-broadcast-svc
 
 persistence:
-  enabled: true
+  enabled: false
   ## database data Persistent Volume Storage Class
   ## If defined, storageClassName: <storageClass>
   ## If set to "-", storageClassName: "", which disables dynamic provisioning
@@ -33,10 +33,8 @@ resources: {}
 # Custom dashd configuration file used to override default dashd settings
 configurationFile:
   dash.conf: |-
-    onlynet=IPv4
-    server=1
+    testnet=0
+    disablewallet=1
+    printtoconsole=1
     rpcuser=rpcuser
     rpcpassword=rpcpassword
-    rpcconnect=127.0.0.1
-    disablewallet=0
-    printtoconsole=1
