--- a/incubator/dashd/values.yaml
+++ b/incubator/dashd/values.yaml
@@ -10,7 +10,7 @@ service:
   selector: tx-broadcast-svc
 
 persistence:
-  enabled: false
+  enabled: true
   ## database data Persistent Volume Storage Class
   ## If defined, storageClassName: <storageClass>
   ## If set to "-", storageClassName: "", which disables dynamic provisioning
