--- a/incubator/fluentd/values.yaml
+++ b/incubator/fluentd/values.yaml
@@ -17,21 +17,11 @@ output:
 
 service:
   type: ClusterIP
-  metrics:
-    name: prometheus-metrics
-    port: 24231
-  agent:
-    port: 24220
-
-service:
-  type: ClusterIP
+  externalPort: 80
   ports:
     - name: "monitor-agent"
       protocol: TCP
       containerPort: 24220
-    - name: "filebeat-tcp"
-      protocol: TCP
-      containerPort: 5044
 
 ingress:
   enabled: false
