--- a/incubator/logstash/templates/deployment.yaml
+++ b/incubator/logstash/templates/deployment.yaml
@@ -14,6 +14,12 @@ spec:
       labels:
         app: {{ template "logstash.name" . }}
         release: {{ .Release.Name }}
+      {{- if .Values.podLabels }}
+        # Allows custom annotations to be specified
+        {{- range $key, $val := .Values.podLabels }}
+        {{ $key }}: {{ $val | quote }}
+        {{- end }}
+      {{- end }}
       annotations:
       {{- if .Values.podAnnotations }}
         # Allows custom annotations to be specified
