--- a/incubator/logstash/values.yaml
+++ b/incubator/logstash/values.yaml
@@ -28,6 +28,11 @@ podAnnotations: {}
   # Add custom annotations to pods
   # iam.amazonaws.com/role: "example-role"
 
+podLabels: {}
+  # Add custom labels to pods
+  # team: "developers"
+  # service: "logstash"
+
 ingress:
   enabled: false
   # Used to create an Ingress and Service record.
