--- a/stable/mssql-linux/templates/pvc-tranlog.yaml
+++ b/stable/mssql-linux/templates/pvc-tranlog.yaml
@@ -2,7 +2,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: {{ template "mssql.fullname" . }}-log
+  name: {{ template "mssql.fullname" . }}-translog
   labels:
     app: {{ template "mssql.fullname" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
@@ -17,7 +17,7 @@ spec:
     - {{ .Values.persistence.transactionLogAccessMode | quote }}
   resources:
     requests:
-      storage: {{ .Values.persistence.transactionlogSize | quote }}
+      storage: {{ .Values.persistence.transactionLogSize | quote }}
 {{- if .Values.persistence.storageClass }}
 {{- if (eq "-" .Values.persistence.storageClass) }}
   storageClassName: ""
