--- a/stable/luigi/templates/service.yaml
+++ b/stable/luigi/templates/service.yaml
@@ -13,7 +13,7 @@ spec:
     - port: {{ .Values.service.externalPort }}
       targetPort: {{ .Values.service.internalPort }}
       protocol: TCP
-      name: {{ .Values.service.name }}
+      name: http
   selector:
     app: {{ template "luigi.name" . }}
     release: {{ .Release.Name }}
