--- a/stable/luigi/Chart.yaml
+++ b/stable/luigi/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 description: Luigi is a Python module that helps you build complex pipelines of batch jobs. It handles dependency resolution, workflow management, visualization etc. It also comes with Hadoop support built in.
 home: https://luigi.readthedocs.io/en/stable/
 maintainers:
-- name: Sam Merry
+- name: sammerry
   email: sam.merry@gmail.com
 sources:
 - https://github.com/spotify/luigi/
@@ -18,4 +18,4 @@ keywords:
 - spark
 - kubernetes job manager
 name: luigi
-version: 0.1.0
+version: 2.7.2
