--- a/stable/dask-distributed/templates/dask-worker-deployment.yaml
+++ b/stable/dask-distributed/templates/dask-worker-deployment.yaml
@@ -22,7 +22,8 @@ spec:
       containers:
         - name: {{ template "dask-distributed.worker-fullname" . }}
           image: "{{ .Values.worker.image }}:{{ .Values.worker.imageTag }}"
-          command: ["dask-worker", "{{ template "dask-distributed.scheduler-fullname" . }}:{{ .Values.scheduler.servicePort }}"]
+          command: ["dask-worker",
+                    "{{ template "dask-distributed.scheduler-fullname" . }}:{{ .Values.scheduler.servicePort }}"]
           ports:
             - containerPort: {{ .Values.worker.containerPort }}
           resources:
