--- a/stable/rabbitmq-ha/values.yaml
+++ b/stable/rabbitmq-ha/values.yaml
@@ -178,5 +178,12 @@ customConfigMap: false
 rbac:
   create: true
 
-  # Defines the serviceAccountName to use when `rbac.create=false`
-  serviceAccountName: default
+## Service Account
+## Ref: https://kubernetes.io/docs/admin/service-accounts-admin/
+##
+serviceAccount:
+  create: true
+
+  ## The name of the ServiceAccount to use.
+  ## If not set and create is true, a name is generated using the fullname template
+  # name:
